--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -195,11 +195,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805221746131_Init.cs" />
+    <Compile Include="Migrations\201805221746131_Init.Designer.cs">
+      <DependentUpon>201805221746131_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805221750305_AddTopics.cs" />
+    <Compile Include="Migrations\201805221750305_AddTopics.Designer.cs">
+      <DependentUpon>201805221750305_AddTopics.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Posts.cs" />
+    <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\Reply.cs" />
+    <Compile Include="Models\Topic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -276,6 +286,14 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201805221746131_Init.resx">
+      <DependentUpon>201805221746131_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805221750305_AddTopics.resx">
+      <DependentUpon>201805221750305_AddTopics.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
