--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201805221750305_AddTopics.Designer.cs">
       <DependentUpon>201805221750305_AddTopics.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805221754099_AddReplies.cs" />
+    <Compile Include="Migrations\201805221754099_AddReplies.Designer.cs">
+      <DependentUpon>201805221754099_AddReplies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -293,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805221750305_AddTopics.resx">
       <DependentUpon>201805221750305_AddTopics.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805221754099_AddReplies.resx">
+      <DependentUpon>201805221754099_AddReplies.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
