--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\201805221754099_AddReplies.Designer.cs">
       <DependentUpon>201805221754099_AddReplies.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805221755551_AddMessages.cs" />
+    <Compile Include="Migrations\201805221755551_AddMessages.Designer.cs">
+      <DependentUpon>201805221755551_AddMessages.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -300,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805221754099_AddReplies.resx">
       <DependentUpon>201805221754099_AddReplies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805221755551_AddMessages.resx">
+      <DependentUpon>201805221755551_AddMessages.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
