--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201805221755551_AddMessages.Designer.cs">
       <DependentUpon>201805221755551_AddMessages.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805231915410_TopicRequireAttributesTitleAndContent.cs" />
+    <Compile Include="Migrations\201805231915410_TopicRequireAttributesTitleAndContent.Designer.cs">
+      <DependentUpon>201805231915410_TopicRequireAttributesTitleAndContent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -288,7 +292,7 @@
     <Content Include="Views\Shared\_NavBarPartial.cshtml" />
     <Content Include="Views\Stories\StoryList.cshtml" />
     <Content Include="Views\Stories\_TopicPartial.cshtml" />
-    <Content Include="Views\Stories\NewStory.cshtml" />
+    <Content Include="Views\Stories\StoryForm.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -316,6 +320,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805221755551_AddMessages.resx">
       <DependentUpon>201805221755551_AddMessages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805231915410_TopicRequireAttributesTitleAndContent.resx">
+      <DependentUpon>201805231915410_TopicRequireAttributesTitleAndContent.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
