topics can now be navigated to
Clicking on a specific topic will now take you to another view. This view will display the content and a list of any replies. Functionality for adding new replies is also there

--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -293,6 +293,8 @@
     <Content Include="Views\Stories\StoryList.cshtml" />
     <Content Include="Views\Stories\_TopicPartial.cshtml" />
     <Content Include="Views\Stories\StoryForm.cshtml" />
+    <Content Include="Views\Stories\Topic.cshtml" />
+    <Content Include="Views\Stories\_ReplyPartial.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
