reply and new topic fix

--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -225,6 +225,10 @@
     <Compile Include="Migrations\201805311908549_removeReplyInfoFromTopic.Designer.cs">
       <DependentUpon>201805311908549_removeReplyInfoFromTopic.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805311929506_addRequireToReplyContent.cs" />
+    <Compile Include="Migrations\201805311929506_addRequireToReplyContent.Designer.cs">
+      <DependentUpon>201805311929506_addRequireToReplyContent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Bookmark.cs" />
@@ -350,6 +354,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805311908549_removeReplyInfoFromTopic.resx">
       <DependentUpon>201805311908549_removeReplyInfoFromTopic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805311929506_addRequireToReplyContent.resx">
+      <DependentUpon>201805311929506_addRequireToReplyContent.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
