--- a/OpenStory/Web.config
+++ b/OpenStory/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OpenStory-20180521093224.mdf;Initial Catalog=aspnet-OpenStory-20180521093224;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DesktopSQLConnection"
+         connectionString="Data Source=DESKTOP-GO945BR\SQLSERV1;Initial Catalog=Open-StoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
