--- a/OpenStory/Web.config
+++ b/OpenStory/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OpenStory-20180521093224.mdf;Initial Catalog=aspnet-OpenStory-20180521093224;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DesktopSQLConnection"
-         connectionString="Data Source=DESKTOP-GO945BR\SQLSERV1;Initial Catalog=Open-StoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DesktopSQLConnection" connectionString="Data Source=DESKTOP-GO945BR\SQLSERV1;Initial Catalog=Open-StoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -34,7 +33,12 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
