dislikes removed from replies
 we can set the int likes to negative if need to be to indicate dislikes

--- a/OpenStory/OpenStory.csproj
+++ b/OpenStory/OpenStory.csproj
@@ -200,7 +200,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\API\PostsController.cs" />
+    <Compile Include="Controllers\API\RepliesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MyPostsController.cs" />
@@ -243,6 +243,10 @@
     <Compile Include="Migrations\201806010606436_removeBookmarkModel.cs" />
     <Compile Include="Migrations\201806010606436_removeBookmarkModel.Designer.cs">
       <DependentUpon>201806010606436_removeBookmarkModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806260136100_RemoveRepliesDislikes.cs" />
+    <Compile Include="Migrations\201806260136100_RemoveRepliesDislikes.Designer.cs">
+      <DependentUpon>201806260136100_RemoveRepliesDislikes.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -376,6 +380,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806010606436_removeBookmarkModel.resx">
       <DependentUpon>201806010606436_removeBookmarkModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806260136100_RemoveRepliesDislikes.resx">
+      <DependentUpon>201806260136100_RemoveRepliesDislikes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
